--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="centeredBody">
+    <div style="background-color: blue; height: 300px" class="centeredBody">
       <!-- <div id="nav">
         <a id="logo" href="#homeContainer">Micha Wempe</a>
         <a href="#homeContainer">Home</a>
