--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
     <div id="projectsContainer" class="container">
       <div id="thumbnailImage">
-        <img class="thumbImage" src="images/AAAREA_2.jpeg" />
-        <img class="thumbImage" src="images/Showcase_01.png" />
-        <img class="thumbImage" src="images/ViSyn_1.png" />
-        <img class="thumbImage" src="images/matrix42_Image1.jpeg" />
-        <img class="thumbImage" src="images/Kuscheljunkie_1.png" />
-        <img class="thumbImage" src="images/MischMit_1.png" />
-        <img class="thumbImage" src="images/ConCon_7.png" />
+        <img class="thumbImage" src="images/AAAREA_2.jpg" />
+        <img class="thumbImage" src="images/Showcase_01.jpg" />
+        <img class="thumbImage" src="images/ViSyn_1.jpg" />
+        <img class="thumbImage" src="images/matrix42_Image1.jpg" />
+        <img class="thumbImage" src="images/Kuscheljunkie_1.jpg" />
+        <img class="thumbImage" src="images/MischMit_1.jpg" />
+        <img class="thumbImage" src="images/ConCon_7.jpg" />
       </div>
 
       <div id="projectBoxContainer">
@@ -113,46 +113,46 @@
           <video class="projectImage" muted autoplay loop>
             <source src="images/AAAREA_1.mp4" type="video/mp4" />
           </video>
-          <img class="projectImage" src="images/AAAREA_2.jpeg" />
-          <img class="projectImage" src="images/AAAREA_3.jpeg" />
+          <img class="projectImage" src="images/AAAREA_2.jpg" />
+          <img class="projectImage" src="images/AAAREA_3.jpg" />
         </section>
 
         <section class="projectTextBox closed" class="portfolioSection">
-          <img class="projectImage" src="images/Showcase_01.png" />
-          <img class="projectImage" src="images/Showcase_02.png" />
-          <img class="projectImage" src="images/Showcase_03.png" />
+          <img class="projectImage" src="images/Showcase_01.jpg" />
+          <img class="projectImage" src="images/Showcase_02.jpg" />
+          <img class="projectImage" src="images/Showcase_03.jpg" />
           <video class="projectImage" muted autoplay loop>
             <source src="images/Showcase_04.mp4" type="video/mp4" />
           </video>
         </section>
 
         <section class="projectTextBox closed" class="viSynSection">
-          <img class="projectImage" src="images/ViSyn_1.png" />
-          <img class="projectImage" src="images/ViSyn_2.png" />
-          <img class="projectImage" src="images/ViSyn_3.mov" />
-          <img class="projectImage" src="images/ViSyn_4.png" />
-          <img class="projectImage" src="images/ViSyn_5.png" />
+          <img class="projectImage" src="images/ViSyn_1.jpg" />
+          <img class="projectImage" src="images/ViSyn_2.jpg" />
+          <img class="projectImage" src="images/ViSyn_3.mp4" />
+          <img class="projectImage" src="images/ViSyn_4.jpg" />
+          <img class="projectImage" src="images/ViSyn_5.jpg" />
         </section>
 
         <section class="projectTextBox closed" class="dwwSection">
-          <img class="projectImage" src="images/matrix42_Image1.jpeg" />
-          <img class="projectImage" src="images/matrix42_Image2.jpeg" />
-          <img class="projectImage" src="images/matrix42_Image3.jpeg" />
-          <img class="projectImage" src="images/matrix42_Image4.jpeg" />
-          <img class="projectImage" src="images/matrix42_Image5.jpeg" />
+          <img class="projectImage" src="images/matrix42_Image1.jpg" />
+          <img class="projectImage" src="images/matrix42_Image2.jpg" />
+          <img class="projectImage" src="images/matrix42_Image3.jpg" />
+          <img class="projectImage" src="images/matrix42_Image4.jpg" />
+          <img class="projectImage" src="images/matrix42_Image5.jpg" />
         </section>
 
         <section class="projectTextBox closed" class="hundeSection">
-          <img class="projectImage" src="images/Kuscheljunkie_1.png" />
-          <img class="projectImage" src="images/Kuscheljunkie_2.png" />
-          <img class="projectImage" src="images/Kuscheljunkie_3.png" />
+          <img class="projectImage" src="images/Kuscheljunkie_1.jpg" />
+          <img class="projectImage" src="images/Kuscheljunkie_2.jpg" />
+          <img class="projectImage" src="images/Kuscheljunkie_3.jpg" />
         </section>
 
         <section class="projectTextBox closed" class="mischMitSection">
-          <img class="projectImage" src="images/MischMit_1.png" />
-          <img class="projectImage" src="images/MischMit_2.png" />
-          <img class="projectImage" src="images/MischMit_3.png" />
-          <img class="projectImage" src="images/MischMit_4.png" />
+          <img class="projectImage" src="images/MischMit_1.jpg" />
+          <img class="projectImage" src="images/MischMit_2.jpg" />
+          <img class="projectImage" src="images/MischMit_3.jpg" />
+          <img class="projectImage" src="images/MischMit_4.jpg" />
         </section>
 
         <section class="projectTextBox closed" class="conConSection">
@@ -168,10 +168,10 @@
           <video class="projectImage" muted autoplay loop>
             <source src="images/ConCon_4.mp4" type="video/mp4" />
           </video>
-          <img class="projectImage" src="images/ConCon_5.png" />
-          <img class="projectImage" src="images/ConCon_6.png" />
-          <img class="projectImage" src="images/ConCon_7.png" />
-          <img class="projectImage" src="images/ConCon_8.MOV" />
+          <img class="projectImage" src="images/ConCon_5.jpg" />
+          <img class="projectImage" src="images/ConCon_6.jpg" />
+          <img class="projectImage" src="images/ConCon_7.jpg" />
+          <img class="projectImage" src="images/ConCon_8.mov" />
         </section>
       </div>
 
@@ -324,7 +324,7 @@
 
     <div class="centerDiv" id="aboutContainerCenter">
       <div id="aboutContainer" class="container">
-        <img src="images/Portolio_Portrait.png" id="aboutPicture" />
+        <img src="images/Portolio_Portrait.jpg" id="aboutPicture" />
 
         <h1 id="aboutHeadline">Hallo, ich bin Micha Wempe, ein Kommunikationsdesigner aus Mainz.</h1>
         <p id="aboutText" class="aboutTextWide">
@@ -372,7 +372,7 @@
 
     <div id="footer">
       <a
-        >Copyright &copy;
+        >&copy;
         <script>
           document.write(new Date().getFullYear());
         </script>
