--- a/thankyou.html
+++ b/thankyou.html
@@ -2,9 +2,10 @@
 <html lang="de">
   <head>
     <title>Micha Wempe</title>
-    <link rel="icon" href="images/Favicon_Portfolio.svg" type="image/svg+xml">
+    <link rel="icon" href="images/Favicon_Portfolio.svg" type="image/svg+xml" />
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     
 
     <link rel="stylesheet" href="style.css" type="text/css" />
@@ -33,12 +34,11 @@
 
     <div id="footer">
       <a
-        >Copyright &copy;
+        >&copy;
         <script>
           document.write(new Date().getFullYear());
         </script>
-        Micha Wempe All Rights Reserved</a
-      >
+      </a>
 
       <div>
         <a>Datenschutz</a>
