--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <div id="projectsContainer" class="container">
       <div id="thumbnailImage">
         <img class="thumbImage" src="images/AAAREA_2.jpg" />
-        <img class="thumbImage" src="images/Showcase_01.jpg" />
         <img class="thumbImage" src="images/ViSyn_1.jpg" />
         <img class="thumbImage" src="images/matrix42_Image1.jpg" />
+        <img class="thumbImage" src="images/ConCon_5.jpg" />
         <img class="thumbImage" src="images/Kuscheljunkie_1.jpg" />
         <img class="thumbImage" src="images/MischMit_1.jpg" />
-        <img class="thumbImage" src="images/ConCon_7.jpg" />
+        <img class="thumbImage" src="images/Showcase_01.jpg" />
       </div>
 
       <div id="projectBoxContainer">
@@ -49,14 +49,6 @@
           <div class="projectKeywords">
             <a>Animation</a>
             <a>Installation</a>
-          </div>
-        </div>
-
-        <div class="projectBox" id="portfolio">
-          <h1>Showcase Portfolio Website</h1>
-          <div class="projectKeywords">
-            <a>Website</a>
-            <a>Portfolio</a>
           </div>
         </div>
 
@@ -77,6 +69,15 @@
           </div>
         </div>
 
+        <div class="projectBox" id="conCon">
+          <h1>CONCON x KI</h1>
+          <div class="projectKeywords">
+            <a>Corporate Design</a>
+            <a>KI</a>
+            <a>Event Design</a>
+          </div>
+        </div>
+
         <div class="projectBox" id="hunde">
           <h1>Hunderettung Kamagne</h1>
           <div class="projectKeywords">
@@ -94,12 +95,11 @@
           </div>
         </div>
 
-        <div class="projectBox" id="conCon">
-          <h1>CONCON x KI</h1>
+        <div class="projectBox" id="portfolio">
+          <h1>Showcase Portfolio Website</h1>
           <div class="projectKeywords">
-            <a>Corporate Design</a>
-            <a>KI</a>
-            <a>Event Design</a>
+            <a>Website</a>
+            <a>Portfolio</a>
           </div>
         </div>
       </div>
@@ -117,19 +117,12 @@
           <img class="projectImage" src="images/AAAREA_3.jpg" />
         </section>
 
-        <section class="projectTextBox closed" class="portfolioSection">
-          <img class="projectImage" src="images/Showcase_01.jpg" />
-          <img class="projectImage" src="images/Showcase_02.jpg" />
-          <img class="projectImage" src="images/Showcase_03.jpg" />
-          <video class="projectImage" muted autoplay loop>
-            <source src="images/Showcase_04.mp4" type="video/mp4" />
-          </video>
-        </section>
-
         <section class="projectTextBox closed" class="viSynSection">
           <img class="projectImage" src="images/ViSyn_1.jpg" />
           <img class="projectImage" src="images/ViSyn_2.jpg" />
-          <img class="projectImage" src="images/ViSyn_3.mp4" />
+          <video class="projectImage" muted autoplay loop>
+            <source src="images/ViSyn_3.mp4" type="video/mp4" />
+          </video>
           <img class="projectImage" src="images/ViSyn_4.jpg" />
           <img class="projectImage" src="images/ViSyn_5.jpg" />
         </section>
@@ -140,19 +133,6 @@
           <img class="projectImage" src="images/matrix42_Image3.jpg" />
           <img class="projectImage" src="images/matrix42_Image4.jpg" />
           <img class="projectImage" src="images/matrix42_Image5.jpg" />
-        </section>
-
-        <section class="projectTextBox closed" class="hundeSection">
-          <img class="projectImage" src="images/Kuscheljunkie_1.jpg" />
-          <img class="projectImage" src="images/Kuscheljunkie_2.jpg" />
-          <img class="projectImage" src="images/Kuscheljunkie_3.jpg" />
-        </section>
-
-        <section class="projectTextBox closed" class="mischMitSection">
-          <img class="projectImage" src="images/MischMit_1.jpg" />
-          <img class="projectImage" src="images/MischMit_2.jpg" />
-          <img class="projectImage" src="images/MischMit_3.jpg" />
-          <img class="projectImage" src="images/MischMit_4.jpg" />
         </section>
 
         <section class="projectTextBox closed" class="conConSection">
@@ -171,9 +151,35 @@
           <img class="projectImage" src="images/ConCon_5.jpg" />
           <img class="projectImage" src="images/ConCon_6.jpg" />
           <img class="projectImage" src="images/ConCon_7.jpg" />
-          <img class="projectImage" src="images/ConCon_8.mov" />
+          <video class="projectImage" muted autoplay loop>
+            <source src="images/ConCon_8.mp4" type="video/mp4" />
+          </video>
         </section>
-      </div>
+      
+
+      <section class="projectTextBox closed" class="hundeSection">
+        <img class="projectImage" src="images/Kuscheljunkie_1.jpg" />
+        <img class="projectImage" src="images/Kuscheljunkie_2.jpg" />
+        <img class="projectImage" src="images/Kuscheljunkie_3.jpg" />
+      </section>
+
+      <section class="projectTextBox closed" class="mischMitSection">
+        <img class="projectImage" src="images/MischMit_1.jpg" />
+        <img class="projectImage" src="images/MischMit_2.jpg" />
+        <img class="projectImage" src="images/MischMit_3.jpg" />
+        <img class="projectImage" src="images/MischMit_4.jpg" />
+      </section>
+
+      <section class="projectTextBox closed" class="portfolioSection">
+        <img class="projectImage" src="images/Showcase_01.jpg" />
+        <img class="projectImage" src="images/Showcase_02.jpg" />
+        <img class="projectImage" src="images/Showcase_03.jpg" />
+        <video class="projectImage" muted autoplay loop>
+          <source src="images/Showcase_04.mp4" type="video/mp4" />
+        </video>
+      </section>
+
+    </div>
 
       <div id="projectPopUpRight">
         <section class="projectTextBox closed" class="aaareaSection">
@@ -199,22 +205,6 @@
             <img src="images/ADC_Logo.svg" />
             <img src="images/red_dot_winner.png" />
           </div>
-        </section>
-
-        <section class="projectTextBox closed" class="portfolioSection">
-          <h1 class="projectHeadline">Showcase Portfolio Website</h1>
-
-          <div class="projectKeywords projectKeywordsText">
-            <a>Website</a>
-            <a>Portfolio</a>
-          </div>
-
-          <p class="projectText">
-            Bei diesem Projekt habe ich eine immersive Portfolio Website erstellt, die sich an einem Ausstellungsraum inspiriert. Die Idee hinter dem Design war es, die eigenen Arbeiten in einem Raum
-            zu präsentieren, in dem sich der Nutzer in seiner eigenen Geschwindigkeit bewegen kann. Die Umsetzung erfolgte mithilfe von 3D Scenen, die es der Kamera ermöglichen, durch das Projekt zu
-            navigieren. Die Geschwindigkeit des Navigierens wird durch das Scrollen der Nutzer*innen bestimmt. Auf diese Weise können die Nutzer*innen sich schnell oder langsam durch die Projekte
-            bewegen oder anhalten, um sich bestimmte Teile des Projekts genauer anzusehen.
-          </p>
         </section>
 
         <section class="projectTextBox closed" class="viSynSection">
@@ -252,6 +242,28 @@
             Für die Umsetzung des Visuals wurde die vorgegebene Form in eine dreidimensionale Darstellung übersetzt, die in verschiedene Formate gebracht wurde. Es wurde ein visuelles Konzept
             entwickelt, das die Botschaft der Konferenz auf den Punkt bringt. Das Keyvisual ist ein zentraler Bestandteil der Marketingkampagne und wird in verschiedenen digitalen und gedruckten
             Formaten eingesetzt.
+          </p>
+        </section>
+
+        <section class="projectTextBox closed" class="conConSection">
+          <h1 class="projectHeadline">CONCON x KI</h1>
+
+          <div class="projectKeywords projectKeywordsText">
+            <a>Corporate Design</a>
+            <a>KI</a>
+            <a>Event Design</a>
+          </div>
+
+          <p class="projectText">
+            Im Rahmen eines Kurses habe ich das Konzept "Think inside the new Box" für die ConCon entwickelt. Als Technologie-orientierte Veranstaltung möchte die ConCon stets mit neuen Entwicklungen
+            Schritt halten. Ich habe mich in meinem Projekt auf die Veränderungen fokussiert, die sich durch den Einsatz von Künstlicher Intelligenz (KI) ergeben können. Meine Idee war es, eine KI Box
+            zu visualisieren, die verschiedene KI-Visuals beherbergt. Die Animation der Elemente symbolisiert den Übergang von einem grafischen Raum zu einem Raum mit KI-Elementen. In der KI Booth
+            können Besucher dies selbst erleben, indem sie verschiedene Anweisungen geben, wie eine naturalistische Darstellung von Technologie, wodurch sich der Raum entsprechend verändert. Auf der
+            Bühne sind mehrere Projektionen installiert, deren Aussehen sich allmählich ändert, indem die Elemente immer weiter abstrahiert werden. Die Gestaltung der Bühne kann jeder Speaker
+            individuell anpassen. <br />
+
+            Gemeinsam mit Paul Eßer und Prof. Florian Jenett habe ich die Konzeptionen bei der ConCon 2022 in einer Booth vorgestellt. Die von uns geplante und designte Booth zeigte, wie KI in Zukunft
+            das Erscheinungsbild der ConCon verändern kann.
           </p>
         </section>
 
@@ -293,27 +305,22 @@
           </p>
         </section>
 
-        <section class="projectTextBox closed" class="conConSection">
-          <h1 class="projectHeadline">CONCON x KI</h1>
+        <section class="projectTextBox closed" class="portfolioSection">
+          <h1 class="projectHeadline">Showcase Portfolio Website</h1>
 
           <div class="projectKeywords projectKeywordsText">
-            <a>Corporate Design</a>
-            <a>KI</a>
-            <a>Event Design</a>
+            <a>Website</a>
+            <a>Portfolio</a>
           </div>
 
           <p class="projectText">
-            Im Rahmen eines Kurses habe ich das Konzept "Think inside the new Box" für die ConCon entwickelt. Als Technologie-orientierte Veranstaltung möchte die ConCon stets mit neuen Entwicklungen
-            Schritt halten. Ich habe mich in meinem Projekt auf die Veränderungen fokussiert, die sich durch den Einsatz von Künstlicher Intelligenz (KI) ergeben können. Meine Idee war es, eine KI Box
-            zu visualisieren, die verschiedene KI-Visuals beherbergt. Die Animation der Elemente symbolisiert den Übergang von einem grafischen Raum zu einem Raum mit KI-Elementen. In der KI Booth
-            können Besucher dies selbst erleben, indem sie verschiedene Anweisungen geben, wie eine naturalistische Darstellung von Technologie, wodurch sich der Raum entsprechend verändert. Auf der
-            Bühne sind mehrere Projektionen installiert, deren Aussehen sich allmählich ändert, indem die Elemente immer weiter abstrahiert werden. Die Gestaltung der Bühne kann jeder Speaker
-            individuell anpassen. <br />
-
-            Gemeinsam mit Paul Eßer und Prof. Florian Jenett habe ich die Konzeptionen bei der ConCon 2022 in einer Booth vorgestellt. Die von uns geplante und designte Booth zeigte, wie KI in Zukunft
-            das Erscheinungsbild der ConCon verändern kann.
+            Bei diesem Projekt habe ich eine immersive Portfolio Website erstellt, die sich an einem Ausstellungsraum inspiriert. Die Idee hinter dem Design war es, die eigenen Arbeiten in einem Raum
+            zu präsentieren, in dem sich der Nutzer in seiner eigenen Geschwindigkeit bewegen kann. Die Umsetzung erfolgte mithilfe von 3D Scenen, die es der Kamera ermöglichen, durch das Projekt zu
+            navigieren. Die Geschwindigkeit des Navigierens wird durch das Scrollen der Nutzer*innen bestimmt. Auf diese Weise können die Nutzer*innen sich schnell oder langsam durch die Projekte
+            bewegen oder anhalten, um sich bestimmte Teile des Projekts genauer anzusehen.
           </p>
         </section>
+
       </div>
     </div>
 
