--- a/privacy_de.html
+++ b/privacy_de.html
@@ -15,14 +15,15 @@
 
   <body>
     <div id="nav">
-      <a href="index.html#homeContainer">Home</a>
-      <a href="index.html#projectsContainer">Projects</a>
-      <a href="index.html#aboutContainerCenter">About</a>
-      <a href="index.html#contactContainer">Contact</a>
-      <a href="#">de | en</a>
+      <a id="logo" href="index_de.html#homeContainer">Micha Wempe</a>
+      <a href="index_de.html#homeContainer">Home</a>
+      <a href="index_de.html#projectsContainer">Projects</a>
+      <a href="index_de.html#aboutContainerCenter">About</a>
+      <a href="index_de.html#contactContainer">Contact</a>
+      <a onclick="changeLanguage('privacy_', 'en')" id="languageButton">en</a>
     </div>
 
-    <a href="index.html"><img src="images/back.svg" class="back" /></a>
+    <a href="index_de.html"><img src="images/back.svg" class="back" /></a>
 
     <div class="centerVer centerHor">
       <div class="privImpContainer">
@@ -105,7 +106,7 @@
 
         <p>
           Telefon: &#91;Telefonnummer der verantwortlichen Stelle&#93;<br />
-          E-Mail: micha-wempe@gmx.de
+          E-Mail: hello@michawempe.de
         </p>
         <p>
           Verantwortliche Stelle ist die nat&uuml;rliche oder juristische Person, die allein oder gemeinsam mit anderen &uuml;ber die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten
@@ -266,7 +267,7 @@
         </p>
         <h2>Quelle</h2>
         <p>
-            https://www.e-recht24.de/impressum-generator.html
+            https://www.e-recht24.de/
         </p>
       </div>
     </div>
@@ -279,8 +280,8 @@
       </a>
 
       <div>
-        <a>Datenschutz</a>
-        <a>Impressum</a>
+        <a href="privacy_de.html">Datenschutz</a>
+        <a href="imprint_de.html">Impressum</a>
       </div>
 
       <div>
@@ -289,4 +290,5 @@
       </div>
     </div>
   </body>
+  <script src="changeLang.js"></script>
 </html>
