--- a/thankyou_en.html
+++ b/thankyou_en.html
@@ -16,6 +16,7 @@
 
   <body>
     <div id="nav">
+      <a id="logo" href="index_en.html#homeContainer">Micha Wempe</a>
       <a href="index.html#homeContainer">Home</a>
       <a href="index.html#projectsContainer">Projects</a>
       <a href="index.html#aboutContainerCenter">About</a>
@@ -23,11 +24,11 @@
       <a href="#">de | en</a>
     </div>
 
-
+    <a href="index_en.html"><img src="images/back.svg" class="back" /></a>
 
    
     <div class="centerVer centerHor">
-      <h1 >Thank you for the E-Mail.</h1>
+      <h1>Thank you for the E-Mail.</h1>
     </div>
 
     
@@ -41,8 +42,8 @@
       </a>
 
       <div>
-        <a>Datenschutz</a>
-        <a>Impressum</a>
+        <a href="privacy_en.html">Privacy</a>
+        <a href="imprint_en.html">Imprint</a>
       </div>
 
       <div>
