--- a/index_de.html
+++ b/index_de.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="homeContainer" class="container">
-      <h1 id="homeHeadline">Hallo, ich bin Micha Wempe, ein Kommunikationsdesigner aus Mainz.</h1>
+      <h1 id="homeHeadline">Hallo, ich bin ein Kommunikationsdesigner aus Mainz.</h1>
       <p id="homeTextOne" class="shortText">
         Ich habe ein Auge für innovative Lösungen und ansprechende Designs. Dabei konzentrierte ich mich bisher auf digitale Projekte, habe aber auch viel Erfahrung im Branding und Corporate Design.
       </p>
@@ -40,7 +40,6 @@
         <img class="thumbImage" src="images/ConCon_5.jpg" />
         <img class="thumbImage" src="images/Kuscheljunkie_1.jpg" />
         <img class="thumbImage" src="images/MischMit_1.jpg" />
-        <img class="thumbImage" src="images/Showcase_01.jpg" />
       </div>
 
       <div id="projectBoxContainer">
@@ -82,24 +81,16 @@
           <h1>Hunderettung Kamagne</h1>
           <div class="projectKeywords">
             <a>3D</a>
-            <a>Kampanie</a>
+            <a>Kampagne</a>
             <a>Plakate</a>
           </div>
         </div>
 
         <div class="projectBox" id="mischMit">
-          <h1>Misch Mit! Kampanie</h1>
+          <h1>Misch Mit! Kampagne</h1>
           <div class="projectKeywords">
             <a>Corporate Design</a>
             <a>Bierdeckel</a>
-          </div>
-        </div>
-
-        <div class="projectBox" id="portfolio">
-          <h1>Showcase Portfolio Website</h1>
-          <div class="projectKeywords">
-            <a>Website</a>
-            <a>Portfolio</a>
           </div>
         </div>
       </div>
@@ -168,15 +159,6 @@
         <img class="projectImage" src="images/MischMit_2.jpg" />
         <img class="projectImage" src="images/MischMit_3.jpg" />
         <img class="projectImage" src="images/MischMit_4.jpg" />
-      </section>
-
-      <section class="projectTextBox closed" class="portfolioSection">
-        <img class="projectImage" src="images/Showcase_01.jpg" />
-        <img class="projectImage" src="images/Showcase_02.jpg" />
-        <img class="projectImage" src="images/Showcase_03.jpg" />
-        <video class="projectImage" muted autoplay loop>
-          <source src="images/Showcase_04.mp4" type="video/mp4" />
-        </video>
       </section>
 
     </div>
@@ -268,11 +250,11 @@
         </section>
 
         <section class="projectTextBox closed" class="hundeSection">
-          <h1 class="projectHeadline">Hunderettung Kamagne</h1>
+          <h1 class="projectHeadline">Hunderettung Kampagne</h1>
 
           <div class="projectKeywords projectKeywordsText">
             <a>3D</a>
-            <a>Kampanie</a>
+            <a>Kampagne</a>
             <a>Plakate</a>
           </div>
 
@@ -287,7 +269,7 @@
         </section>
 
         <section class="projectTextBox closed" class="mischMitSection">
-          <h1 class="projectHeadline">Misch Mit! Kampanie</h1>
+          <h1 class="projectHeadline">Misch Mit! Kampagne</h1>
 
           <div class="projectKeywords projectKeywordsText">
             <a>Corporate Design</a>
@@ -305,22 +287,6 @@
           </p>
         </section>
 
-        <section class="projectTextBox closed" class="portfolioSection">
-          <h1 class="projectHeadline">Showcase Portfolio Website</h1>
-
-          <div class="projectKeywords projectKeywordsText">
-            <a>Website</a>
-            <a>Portfolio</a>
-          </div>
-
-          <p class="projectText">
-            Bei diesem Projekt habe ich eine immersive Portfolio Website erstellt, die sich an einem Ausstellungsraum inspiriert. Die Idee hinter dem Design war es, die eigenen Arbeiten in einem Raum
-            zu präsentieren, in dem sich der Nutzer in seiner eigenen Geschwindigkeit bewegen kann. Die Umsetzung erfolgte mithilfe von 3D Scenen, die es der Kamera ermöglichen, durch das Projekt zu
-            navigieren. Die Geschwindigkeit des Navigierens wird durch das Scrollen der Nutzer*innen bestimmt. Auf diese Weise können die Nutzer*innen sich schnell oder langsam durch die Projekte
-            bewegen oder anhalten, um sich bestimmte Teile des Projekts genauer anzusehen.
-          </p>
-        </section>
-
       </div>
     </div>
 
@@ -333,7 +299,7 @@
       <div id="aboutContainer" class="container">
         <img src="images/Portolio_Portrait.jpg" id="aboutPicture" />
 
-        <h1 id="aboutHeadline">Hallo, ich bin Micha Wempe, ein Kommunikationsdesigner aus Mainz.</h1>
+        <h1 id="aboutHeadline">Hallo, ich bin ein Kommunikationsdesigner aus Mainz.</h1>
         <p id="aboutText" class="aboutTextWide">
           Ich habe meinen Abschluss in Kommunikationsdesign an der Hochschule Mainz gemacht und Erfahrungen in den Bereichen Branding, Editorial Design und digitale Produkte gesammelt. <br />
           Ich arbeite seit sechs Jahren kreativ und habe in dieser Zeit Erfahrungen sowohl in meiner schulischen Bildung als auch in meinen Praktika und freiberuflichen Tätigkeiten gesammelt. <br />
@@ -341,7 +307,7 @@
         </p>
 
         <p id="aboutText" class="aboutTextNarrow">
-          Hallo, ich bin Micha Wempe, ein Kommunikationsdesigner aus Mainz. <br />
+          Hallo, ich bin ein Kommunikationsdesigner aus Mainz. <br />
           Ich habe meinen Abschluss in Kommunikationsdesign an der Hochschule Mainz gemacht und Erfahrungen in den Bereichen Branding, Editorial Design und digitale Produkte gesammelt. <br />
           Ich arbeite seit sechs Jahren kreativ und habe in dieser Zeit Erfahrungen sowohl in meiner schulischen Bildung als auch in meinen Praktika und freiberuflichen Tätigkeiten gesammelt. <br />
           Ich suche eine Position als Kommunikationsdesigner, die es mir ermöglicht, gemeinsam mit Kunden und Kollegen innovative Produkte zu gestalten.
@@ -365,7 +331,7 @@
       <div id="contactContainerTwo">
         <form action="https://formsubmit.co/wempemicha3@gmail.com" method="POST">
           <input type="hidden" name="_captcha" value="false" />
-          <input type="hidden" name="_next" value="thankyou_de.html"/>
+          <input type="hidden" name="_next" value="www.michawempe.de/thankyou_de.html"/>
           <h3 class="contactDiscription">Dein Name</h3>
           <input type="text" name="name" placeholder="Name" required />
           <h3 class="contactDiscription">Deine E-Mail</h3>
