--- a/index_en.html
+++ b/index_en.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="homeContainer" class="container">
-      <h1 id="homeHeadline">Hello, I'm Micha Wempe, a communication designer from Mainz.</h1>
+      <h1 id="homeHeadline">Hello, I'm a communication designer from Mainz.</h1>
       <p id="homeTextOne" class="shortText">
         I have an eye for innovative solutions and appealing designs. So far, I have focused on digital projects, but I also have a lot of experience in branding and corporate design.
       </p>
@@ -40,7 +40,6 @@
         <img class="thumbImage" src="images/ConCon_5.jpg" />
         <img class="thumbImage" src="images/Kuscheljunkie_1.jpg" />
         <img class="thumbImage" src="images/MischMit_1.jpg" />
-        <img class="thumbImage" src="images/Showcase_01.jpg" />
       </div>
 
       <div id="projectBoxContainer">
@@ -92,14 +91,6 @@
           <div class="projectKeywords">
             <a>Corporate Design</a>
             <a>Beer Coaster</a>
-          </div>
-        </div>
-
-        <div class="projectBox" id="portfolio">
-          <h1>Showcase Portfolio Website</h1>
-          <div class="projectKeywords">
-            <a>Website</a>
-            <a>Portfolio</a>
           </div>
         </div>
       </div>
@@ -167,15 +158,6 @@
           <img class="projectImage" src="images/MischMit_2.jpg" />
           <img class="projectImage" src="images/MischMit_3.jpg" />
           <img class="projectImage" src="images/MischMit_4.jpg" />
-        </section>
-
-        <section class="projectTextBox closed" class="portfolioSection">
-          <img class="projectImage" src="images/Showcase_01.jpg" />
-          <img class="projectImage" src="images/Showcase_02.jpg" />
-          <img class="projectImage" src="images/Showcase_03.jpg" />
-          <video class="projectImage" muted autoplay loop>
-            <source src="images/Showcase_04.mp4" type="video/mp4" />
-          </video>
         </section>
       </div>
 
@@ -294,21 +276,6 @@
             Through clear, direct language and eye-catching design, the coasters are intended to help promote understanding of people with refugee experience.
           </p>
         </section>
-
-        <section class="projectTextBox closed" class="portfolioSection">
-          <h1 class="projectHeadline">Showcase Portfolio Website</h1>
-
-          <div class="projectKeywords projectKeywordsText">
-            <a>Website</a>
-            <a>Portfolio</a>
-          </div>
-
-          <p class="projectText">
-            For this project, I created an immersive portfolio website inspired by an exhibition space. The idea behind the design was to present one's work in a space where the user can move at their
-            own speed. The implementation was done with the help of 3D scenes that allow the camera to navigate through the project. The speed of navigation is determined by the scrolling of the
-            users. In this way, users can move quickly or slowly through the projects, or pause to take a closer look at certain parts of the project.
-          </p>
-        </section>
       </div>
     </div>
 
@@ -321,7 +288,7 @@
       <div id="aboutContainer" class="container">
         <img src="images/Portolio_Portrait.jpg" id="aboutPicture" />
 
-        <h1 id="aboutHeadline">Hello, I am Micha Wempe, a communication designer from Mainz.</h1>
+        <h1 id="aboutHeadline">Hello, I am a communication designer from Mainz.</h1>
         <p id="aboutText" class="aboutTextWide">
           I graduated from Mainz University of Applied Sciences with a degree in Communication Design and gained experience in branding, editorial design and digital products. <br />
           I have been working creatively for six years and during this time I have gained experience in my school education as well as in my internships and freelance work. <br />
@@ -329,7 +296,7 @@
         </p>
 
         <p id="aboutText" class="aboutTextNarrow">
-          Hello, I am Micha Wempe, a communication designer from Mainz.<br />
+          Hello, I am a communication designer from Mainz.<br />
           I graduated from Mainz University of Applied Sciences with a degree in Communication Design and gained experience in branding, editorial design and digital products. <br />
           I have been working creatively for six years and during this time I have gained experience in my school education as well as in my internships and freelance work. <br />
           I am seeking a position as a communication designer that will allow me to collaborate with clients and colleagues to create innovative products.
