--- a/index.html
+++ b/index.html
@@ -364,5 +364,8 @@
   </body>
   <script src="changeLang.js"></script>
   <script src="script.js"></script>
+  <script>
+    window.location = "https://michawempe.de";
+  </script>
   
 </html>
