--- a/index_en.html
+++ b/index_en.html
@@ -320,7 +320,7 @@
       <div id="contactContainerTwo">
         <form action="https://formsubmit.co/wempemicha3@gmail.com" method="POST">
           <input type="hidden" name="_captcha" value="false" />
-          <input type="hidden" name="_next" value="www.michawempe.de/thankyou_en.html" />
+          <input type="hidden" name="_next" value="https://michawempe.github.io/Portfolio_2023/thankyou_en.html" />
           <h3 class="contactDiscription">Your Name</h3>
           <input type="text" name="name" placeholder="Name" required />
           <h3 class="contactDiscription">Your E-Mail</h3>
