--- a/thankyou_de.html
+++ b/thankyou_de.html
@@ -16,12 +16,8 @@
 
   <body>
     <div id="nav">
-        <a id="logo" href="index_de.html#homeContainer">Micha Wempe</a>
-      <a href="index.html#homeContainer">Home</a>
-      <a href="index.html#projectsContainer">Projects</a>
-      <a href="index.html#aboutContainerCenter">About</a>
-      <a href="index.html#contactContainer">Contact</a>
-      <a href="#">de | en</a>
+        <a id="logo" href="https://michawempe.de">Micha Wempe</a>
+        <a href="https://michawempe.de">Home</a>
     </div>
     
     <a href="index_de.html"><img src="images/back.svg" class="back" /></a>
