--- a/index_de.html
+++ b/index_de.html
@@ -331,7 +331,7 @@
       <div id="contactContainerTwo">
         <form action="https://formsubmit.co/wempemicha3@gmail.com" method="POST">
           <input type="hidden" name="_captcha" value="false" />
-          <input type="hidden" name="_next" value="www.michawempe.de/thankyou_de.html"/>
+          <input type="hidden" name="_next" value="https://michawempe.github.io/Portfolio_2023/thankyou_de.html"/>
           <h3 class="contactDiscription">Dein Name</h3>
           <input type="text" name="name" placeholder="Name" required />
           <h3 class="contactDiscription">Deine E-Mail</h3>
