--- a/thankyou_en.html
+++ b/thankyou_en.html
@@ -6,31 +6,22 @@
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    
 
     <link rel="stylesheet" href="style.css" type="text/css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@300;400&display=swap');
-        </style>
+      @import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@300;400&display=swap");
+    </style>
   </head>
 
   <body>
     <div id="nav">
-      <a href="index.html#homeContainer">Home</a>
-      <a href="index.html#projectsContainer">Projects</a>
-      <a href="index.html#aboutContainerCenter">About</a>
-      <a href="index.html#contactContainer">Contact</a>
-      <a href="#">de | en</a>
+      <a id="logo" href="https://michawempe.de">Micha Wempe</a>
+      <a href="https://michawempe.de">Home</a>
     </div>
 
-
-
-   
     <div class="centerVer centerHor">
       <h1>Thank you for the E-Mail.</h1>
     </div>
-
-    
 
     <div id="footer">
       <a
