--- a/thankyou_en.html
+++ b/thankyou_en.html
@@ -14,10 +14,8 @@
   </head>
 
   <body>
-    <div id="nav">
-      <a id="logo" href="https://michawempe.de">Micha Wempe</a>
-      <a href="https://michawempe.de">Home</a>
-    </div>
+
+    <a href="index_en.html"><img src="images/back.svg" class="back" /></a>
 
     <div class="centerVer centerHor">
       <h1>Thank you for the E-Mail.</h1>
