--- a/index_de.html
+++ b/index_de.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="projectBox" id="hunde">
-          <h1>Hunderettung Kamagne</h1>
+          <h1>Hunderettung Kampagne</h1>
           <div class="projectKeywords">
             <a>3D</a>
             <a>Kampagne</a>
